# omnireel-ai

./: .gitignore  Cargo.toml  README.md  SECURITY.md  requirements.txt  run.py  runner.py
docs/: comfyui_local_video_backend.md  portfolio_publish_checklist.md  public_sharing_and_linkedin_pack.md  real_comfyui_omnireel_pipeline.md  video_backend_modes.md  windows_local_qa.md
scripts/: __init__.py  cli.py  comfyui_video_client.py  comfyui_workflow_inspector.py  models_pipeline.py  orchestrator.py  run_comfyui_omnireel.py
src/: main.rs  subtitles.rs  video.rs
workflows/: real_video_workflow_api.json
