[package]
name = "omnireel-ai-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust high-performance local video compositor for OmniReel AI"
repository = "https://github.com/mohit231007/omnireel-ai"
readme = "README.md"
rust-version = "1.76"

[features]
default = []
native-ffmpeg = ["ffmpeg-next"]

[dependencies]
ab_glyph = "0.2"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = "0.11"
ffmpeg-next = { version = "7", optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
imageproc = "0.25"
log = "0.4"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "process", "fs"] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "abort"
strip = "symbols"
